<resources>
    <string name="app_name">Licenta</string>
    <string name="email">E-mail</string>
    <string name="loginPatientTitle">Patient Login</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="registerPatientTitle">Patient Register</string>
    <string name="registerMedicTitle">Doctor Register</string>
    <string name="loginMedicTitle">Doctor Login</string>
    <string name="loginButton">Login</string>
    <string name="password">Password</string>
    <string name="register1">Don`t have an account?</string>
    <string name="register2">Register</string>
    <string name="medicButton">Doctor</string>
    <string name="patientButton">Patient</string>
    <string name="welcome_to_medchat">Welcome to MedChat!</string>
    <string name="choose_the_category">Choose your category!</string>
    <string name="logout">Logout</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="doctor_register">Doctor Register</string>

    <string-array name="Specializari">
        <item>Cardiologie</item>
        <item>Chirurgie</item>
        <item>Dermatologie</item>
        <item>Endocrionologie</item>
        <item>Gastroenterologie</item>
        <item>Nefrologie</item>
        <item>Neonatologie</item>
        <item>Neurochirurgie</item>
        <item>Neurologie</item>
        <item>Obstretica-Ginecologie</item>
        <item>Oftalmologie</item>
        <item>Oncologie</item>
        <item>Ortopedie</item>
        <item>Pediatrie</item>
        <item>Reumatologie</item>
        <item>Urologie</item>
        <item>Pneumologie</item>
    </string-array>

    <string-array name="Gender">
        <item>Feminin</item>
        <item>Masculin</item>
    </string-array>

    <string-array name="experienta">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
