<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medic.RegisterMedicActivity">

    <include
        android:id="@+id/main_app_bar"
        layout="@layout/bar_layout" />

    <TextView
        android:id="@+id/registerDoctor"
        android:layout_width="284dp"
        android:layout_height="49dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/doctor_register"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="303dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerDoctor"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="303dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"
        app:layout_constraintVertical_bias="0.016" />


    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="301dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/adressEditText"
        android:layout_width="302dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="174dp"
        android:layout_height="44dp"
        android:text="@string/register2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


    <EditText
        android:id="@+id/password"
        android:layout_width="318dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specializareLayout"
        app:layout_constraintVertical_bias="0.125" />

    <LinearLayout
        android:id="@+id/specializareLayout"
        android:layout_width="312dp"
        android:layout_height="41dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adressEditText"
        app:layout_constraintVertical_bias="0.113">

        <TextView
            android:id="@+id/specializareTextView"
            android:layout_width="106dp"
            android:layout_height="33dp"
            android:text="Specializare"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="473dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="201dp"
            android:layout_height="34dp"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="473dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>